[metadata]
name = pytest_check_links
version = attr: pytest_check_links._version.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
summary = Check links in files
description_file = README.md
long_description_content_type = text/markdown
home_page = https://github.com/jupyterlab/pytest-check-links
license = BSD-3-Clause
python_requires = >=3.7
classifier =
    Framework :: Jupyter
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keywords =
    testing
    documentation
    links
    html

[files]
packages =
    pytest_check_links

[entry_points]
pytest11 =
    check-links = pytest_check_links.plugin
console_scripts =
    pytest-check-links = pytest_check_links.__main__:main

[options.extras_require]
cache =
    requests-cache~=0.5.2

[pep8]
ignore=E128

[flake8]
ignore=E128

[tool:pytest]
pytester_example_dir = examples

filterwarnings =
    ignore::FutureWarning:
    ignore::DeprecationWarning:requests_cache
