[metadata]
name = pytest_check_links
version = attr: pytest_check_links._version.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
summary = Check links in files
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/jupyterlab/pytest-check-links
license = BSD-3-Clause
classifier =
    Framework :: Jupyter
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keywords =
    testing
    documentation
    links
    html

[options.packages.find]
exclude = ['docs*', 'examples*', 'test*']

[options.entry_points]
pytest11 =
    check-links = pytest_check_links.plugin
console_scripts =
    pytest-check-links = pytest_check_links.__main__:main

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    docutils
    html5lib
    nbconvert
    nbformat
    pytest >= 7.0
    requests

[options.extras_require]
cache =
    requests-cache~=0.5.2
test =
    %(cache)s
    pre-commit

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    test/*: B011, F841
